[gd_scene load_steps=2 format=3 uid="uid://dhalloffame01"]

[ext_resource type="Script" path="res://scripts/screens/HallOfFameScreen.gd" id="1_script"]

[node name="HallOfFameScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.15, 1)

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 12

[node name="Header" type="HBoxContainer" parent="VBox"]
layout_mode = 2
custom_minimum_size = Vector2(0, 60)
theme_override_constants/separation = 16

[node name="BackButton" type="Button" parent="VBox/Header"]
layout_mode = 2
custom_minimum_size = Vector2(100, 50)
text = "< Back"

[node name="TitleLabel" type="Label" parent="VBox/Header"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 28
text = "Hall of Fame"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CountLabel" type="Label" parent="VBox/Header"]
layout_mode = 2
custom_minimum_size = Vector2(150, 0)
theme_override_font_sizes/font_size = 16
text = "0 / 50"
horizontal_alignment = 2
vertical_alignment = 1

[node name="FilterBar" type="HBoxContainer" parent="VBox"]
layout_mode = 2
custom_minimum_size = Vector2(0, 50)
theme_override_constants/separation = 8
alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBox"]
layout_mode = 2

[node name="Content" type="MarginContainer" parent="VBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_top = 10
theme_override_constants/margin_bottom = 10

[node name="PlayerListScroll" type="ScrollContainer" parent="VBox/Content"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PlayerList" type="VBoxContainer" parent="VBox/Content/PlayerListScroll"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8

[node name="Footer" type="HBoxContainer" parent="VBox"]
layout_mode = 2
custom_minimum_size = Vector2(0, 60)
alignment = 1

[node name="TeamSnapshotButton" type="Button" parent="VBox/Footer"]
layout_mode = 2
custom_minimum_size = Vector2(250, 50)
text = "Save Team Snapshot"
